The bck2brwsr.js property can also point to an existing file on disk